--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset.ipynb
@@ -15,11 +15,21 @@
         "\n",
         "[![Imgur](https://imgur.com/BlX0rqL.png)](https://youtu.be/csQj1e6Oj38?list=PLxqBkZuBynVS8mDTc8ZGermXiS-32pR2y)\n",
         "\n",
-        "----------------------\n",
+        "---\n",
         "\n",
-        "### Special Note - Due to Out-of-memory limits in Kaggle, I could NOT run this Notebook inside Kaggle with any larger dataset than 1000 images. Hence the resultant fake images generated at the end will almost be like noise. But this Notebook is mostly written as a Tutorial to show the flow of DCGAN.\n",
+        "#### Special Note - DCGAN on CELEBA dataset being particularly CPU and GPU intensive operation, and hence inside Kaggle or even Google-Colab, I was getting Out-of-memory limits. So there I could NOT run this Notebook with any larger dataset containing more than 1000 images. Hence the resultant fake images generated at the end will almost be like noise.\n",
         "\n",
-        "-----------------------------------"
+        "#### But if you run this Notebook with the full CelebA Dataset of 202,599 number of face images (and around 100 epochs), keeping those images in some cloud like Google Cloud / AWS etc and with some cloud-GPU, then the resultant fake images will be very much close to real. \n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### Now I have already downloaded the CELEBA Dataset to my local Machine from [Kaggle](https://www.kaggle.com/jessicali9530/celeba-dataset). And so I will be loading this Data from my local drive in below.\n",
+        "\n",
+        "### Below I am explaining some issues you may face when you decide to store your CelebA dataset in Google Drive and your notebook in Google Colab. So in this case you are reading the data from Google Drive and while working in Colab.\n",
+        "\n",
+        "I faced some problem in this approach, and hence finally decided to keep the CelebA dataset directly in Colab's session storage. But note, session storage will be completely deleted as soon as you your Colab session ends.\n",
+        "\n",
+        "---"
       ]
     },
     {
