small change in description of project

--- a/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset.ipynb
+++ b/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset.ipynb
@@ -6,6 +6,11 @@
    "source": [
     "## Deep Neural Network - Base Pytorch Model - FMNIST Dataset\n",
     "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/D0MWQ8J8lZc?list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/00vsGks.png)](https://youtu.be/D0MWQ8J8lZc?list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR)\n",
+    "\n",
+    "\n",
     "Fashion-MNIST dataset consists of a training set of 60,000 examples and a test set of 10,000 examples. Each example is a 28x28 grayscale image, associated with a label from 10 classes\n",
     "\n",
     "Each image is 28 pixels in height and 28 pixels in width, for a total of 784 pixels in total. Each pixel has a single pixel-value associated with it, indicating the lightness or darkness of that pixel, with higher numbers meaning darker. \n",
