small change in description of project

--- a/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset.ipynb
+++ b/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset.ipynb
@@ -1198,11 +1198,20 @@
     "\n",
     "Ans from [here](https://stats.stackexchange.com/a/51034/292778)\n",
     "\n",
-    "O utside the range of some input values, the derivatives of the activation functions will be close to zero. At those points, the gradient descent steps will be extremely slow due to the small weight updates.\n",
+    "Outside the range of some input values, the derivatives of the activation functions will be close to zero. At those points, the gradient descent steps will be extremely slow due to the small weight updates.\n",
     "\n",
     "The inputs should be scaled to the so-called \"active range\" of the activation function, or, in other words, the area of the function curve where the derivative of the function is clearly non-zero. This is done for backpropagation to work properly, since it uses activation function derivatives, and `~ 0` derivatives imply extremely small (insignificant) changes to NN weights (no learning). For sigmoid, the active range lies somewhere between `-sqrt(3)` and `sqrt(3)`. You may scale inputs to that range.\n",
     "\n",
     "Also, yes: sigmoid will always output values in `(0;1)`, because that's sigmoid's range. You will need to scale NN outputs to the necessary ranges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/D0MWQ8J8lZc?list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/00vsGks.png)](https://youtu.be/D0MWQ8J8lZc?list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR)"
    ]
   }
  ],
