updating YT Links

--- a/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
+++ b/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fashion-MNIST dataset consists of a training set of 60,000 examples and a test set of 10,000 examples. Each example is a 28x28 grayscale image, associated with a label from 10 classes"
+    "## Why We Scale images for Neural Network\n",
+    "\n",
+    "Fashion-MNIST dataset consists of a training set of 60,000 examples and a test set of 10,000 examples. Each example is a 28x28 grayscale image, associated with a label from 10 classes\n",
+    "\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/CqnvNgr5050)\n",
+    "\n",
+    "[![Imgur](https://i.imgur.com/cFLzJSG.png)](https://youtu.be/CqnvNgr5050)\n"
    ]
   },
   {
