updating correct youtube video numbering

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "# DCGAN's Generator Function - Understanding Filter Size and Input Shape\n",
     "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/cFld9T5xZqo)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/4zHY6co.png)](https://youtu.be/cFld9T5xZqo)\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
     "### Some Fundamental concepts before fully understanding each step of the Generator() Function implementing the Reverse Convolution (or `Conv2DTranspose`) for the DCGAN.\n",
     "\n",
     "First check what I did inside the Generator Function.\n",
