updating DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape

--- a/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
+++ b/Computer_Vision/DCGAN_with_Tensorflow_Keras_Celeb_A_Dataset/DCGAN_Generator_Function_Understanding_Filter_Size_and_Input_Shape.ipynb
@@ -4,18 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DCGAN's Generator Function - Understanding Filter Size and Input Shape\n",
+    "#### Some Fundamental concepts before fully understanding each step of the Generator() Function implementing the Reverse Convolution (or `Conv2DTranspose`) for the DCGAN.\n",
     "\n",
-    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/cFld9T5xZqo)\n",
+    "## Hyper-parameters: CNN\n",
     "\n",
-    "[![Imgur](https://imgur.com/4zHY6co.png)](https://youtu.be/cFld9T5xZqo)\n",
+    "Here we will speak about the additional parameters present in CNNs, please refer part-I(link at the start) to learn about hyper-parameters in dense layers as they also are part of the CNN architecture.\n",
     "\n",
+    "- **Kernel/Filter Size**: A filter is a matrix of weights with which we convolve on the input. The filter on convolution, provides a measure for how close a patch of input resembles a feature. A feature may be vertical edge or an arch,or any shape. The weights in the filter matrix are derived while training the data. Smaller filters collect as much local information as possible, bigger filters represent more global, high-level and representative information. If you think that a big amount of pixels are necessary for the network to recognize the object you will use large filters (as 11x11 or 9x9). If you think what differentiates objects are some small and local features you should use small filters (3x3 or 5x5). Note in general we use filters with odd sizes.\n",
+    "\n",
+    "\n",
+    "- **Padding:** Padding is generally used to add columns and rows of zeroes to keep the spatial sizes constant after convolution, doing this might improve performance as it retains the information at the borders. Parameters for the padding function in Keras are Same- output size is the same as input size by padding evenly left and right, but if the amount of columns to be added is odd, it will add the extra column to the right.Valid- Output size shrinks to ceil((n+f-1)/s) where ’n’ is input dimensions ‘f’ is filter size and ‘s’ is stride length. ceil rounds off the decimal to the closet higher integer, No padding occurs.\n",
+    "\n",
+    "- **Stride:** It is generally the number of pixels you wish to skip while traversing the input horizontally and vertically during convolution after each element-wise multiplication of the input weights with those in the filter. It is used to decrease the input image size considerably as after the convolution operation the size shrinks to ceil((n+f-1)/s) where ’n’ is input dimensions ‘f’ is filter size and ‘s’ is stride length. ceil rounds off the decimal to the closet higher integer.\n",
+    "\n",
+    "\n",
+    "- **Number of Channels:** It is the equal to the number of color channels for the input but in later stages is equal to the number of filters we use for the convolution operation. The more the number of channels,more the number of filters used, more are the features learnt, and more is the chances to over-fit and vice-versa.\n",
+    "Pooling-layer Parameters: Pooling layers too have the same parameters as a convolution layer. Max-Pooling is generally used among all the pooling options. The objective is to down-sample an input representation (image, hidden-layer output matrix, etc.), reducing its dimensionality by keeping the max value(activated features) in the sub-regions binned.\n",
+    "\n",
+    "\n",
+    "#### Adding Batch Normalization\n",
+    "\n",
+    "**Batch Normalization:-** Generally in deep neural network architectures the normalized input after passing through various adjustments in intermediate layers becomes too big or too small while it reaches far away layers which causes a problem of internal co-variate shift which impacts learning to solve this we add a batch normalization layer to standardize (mean centering and variance scaling) the input given to the later layers. This layer must generally be placed in the architecture after passing it through the layer containing activation function and before the Dropout layer(if any) . An exception is for the sigmoid activation function wherein you need to place the batch normalization layer before the activation to ensure that the values lie in linear region of sigmoid before the function is applied.\n",
     "\n",
     "---\n",
     "\n",
-    "### Some Fundamental concepts before fully understanding each step of the Generator() Function implementing the Reverse Convolution (or `Conv2DTranspose`) for the DCGAN.\n",
-    "\n",
-    "First check what I did inside the Generator Function.\n",
+    "Now, check what I did inside the Generator Function.\n",
     "\n",
     "#### In my case for the DCGAN on CELEB-A Dataset in this Notebook, I wanted the final output images to be `64*64*3`\n",
     "\n",
@@ -28,6 +41,7 @@
     "The Generator starts with a noise vector z. Using a fully connected layer, we reshape the vector into a three-dimensional hidden layer with a small base (width × height) and large depth (512). Using transposed convolutions, the input is progressively reshaped such that its base grows while its depth decreases until we reach the final layer with the shape of the image we are seeking to synthesize, 64 × 64 × 3. After each transposed convolution layer, we apply batch normalization and the Leaky ReLU activation function. At the final layer, we do not apply batch normalization and, instead of ReLU, we use the Sigmoid activation function.\n",
     "\n",
     "---\n",
+    "\n",
     "\n",
     "### My Generator Function - For the DCGAN on CELEB-A Dataset in this Notebook, I wanted the final output images to be `64*64*3`\n",
     "\n",
@@ -66,7 +80,7 @@
     "```\n",
     "\n",
     "\n",
-    "## Important Explanations of Parameter Calculation to my Input Dense Layer\n",
+    "## Explanations of Parameter Calculation to my Input Dense Layer\n",
     "\n",
     "The meaning of (4*4*512)\n",
     "\n",
@@ -694,12 +708,21 @@
     "\n",
     "* Assign random values within a range and many more.\n",
     "\n",
+    "---\n",
     "\n",
-    "### What is a 'neuron' in the context of Convolutional Neural Network?\n",
+    "## What is a 'neuron' in the context of Convolutional Neural Network?\n",
+    "\n",
+    "First note that, densely connected neural networks are poor at working with images, due to the huge number of parameters that would need to be learned. And thats where CNN comes, and note from the image below how CNN allows us to optimize the calculations.\n",
+    "\n",
+    "On the Figure below, its a 2D convolution - neurons marked with numbers 1–9 form the input layer, while units A-D denotes calculated feature map elements. And I-IV are values of the Filter or Kernel.\n",
+    "\n",
+    "![Imgur](https://imgur.com/d6c8IkY.gif)\n",
+    "\n",
+    "First of all, you can see that not all neurons in the two consecutive layers are connected to each other. For example, unit 1 only affects the value of A. Secondly, we see that some neurons share the same weights. Both of these properties mean that we have much less parameters to learn. By the way, it is worth noting that a single value from the filter affects every element of the feature map — it will be crucial in the context of backpropagation.\n",
     "\n",
     "[Source](https://cs231n.github.io/convolutional-networks/)\n",
     "\n",
-    "For instance, the width of one layer, say the first MLP layer has a width of 512, meaning it has 512 neurons all of which are connected to each input value.\n",
+    "The width of one layer, say the first MLP layer has a width of 512, meaning it has 512 neurons all of which are connected to each input value.\n",
     "\n",
     "One can think of a neuron in a convolutional layer as follows (according to a CS231n article[1]):\n",
     "\n",
