--- a/Computer_Vision/41-GramMatrixForNeuralStyleTransfer.ipynb
+++ b/Computer_Vision/41-GramMatrixForNeuralStyleTransfer.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "## Gram matrix\n",
     "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://youtu.be/AIK6Gi3NUhI)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/942zeOo.png)](https://youtu.be/AIK6Gi3NUhI)\n",
+    "\n",
+    "\n",
+    "------\n",
+    "\n",
     "In simple words, a Gram matrix (often referred to as a Gramian matrix) is a matrix created by multiplying a matrix with its own transpose.\n",
     "\n",
     "![Imgur](https://imgur.com/I6JDFEM.png)\n",
