--- a/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
+++ b/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Label Smoothing Cross-Entropy-Loss from Scratch with PyTorch\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=PIpJn8TZJO8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=2)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/LoTBKcc.png)](https://www.youtube.com/watch?v=PIpJn8TZJO8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
