updating broken links

--- a/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
+++ b/PyTorch-Techniques/46-Label-Smoothing-CrossEntropyLoss-Scratch.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=PIpJn8TZJO8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=2)\n",
     "\n",
-    "[![Imgur](https://imgur.com/paIgNhs.png)](https://www.youtube.com/watch?v=PIpJn8TZJO8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=2)\n"
+    "[![Imgur](https://imgur.com/BMYxc3W.png)](https://www.youtube.com/watch?v=PIpJn8TZJO8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=2)\n",
+    "\n"
    ]
   },
   {
