updating links for Dropout Layer Vid

--- a/PyTorch-Techniques/47-Dropout-Layer.ipynb
+++ b/PyTorch-Techniques/47-Dropout-Layer.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "What is Dropout in PyTorch ?\n",
     "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=ae8Iz6wDKek&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=3)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/d6VH47R.png)](https://www.youtube.com/watch?v=ae8Iz6wDKek&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=3)\n",
+    "\n",
     "Dropout in PyTorch is A regularization method where randomly selected neurons are dropped from the neural network to avoid overfitting. And this is done with the help of a dropout layer that manages the neurons to be dropped off by selecting a frequency pattern. Once the model is entered into evaluation mode, the dropout layer is shutdown, and training of the dataset will be started.\n",
     "\n",
     "## What is Dropout and how does it work?\n",
