updating 52-Input-Shape-of-Conv-Layer-and-Linear-Layer-of-PyTorch-Neural-Network

--- a/PyTorch-Techniques/52-Input-Shape-of-Conv-Layer-and-Linear-Layer-of-PyTorch-Neural-Network.ipynb
+++ b/PyTorch-Techniques/52-Input-Shape-of-Conv-Layer-and-Linear-Layer-of-PyTorch-Neural-Network.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input Shape of Tensor for PyTorch Neural-Network - Conv-Layer and-Linear-Layer\n",
+    "\n",
+    "### [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=qQ6xbv5kPxE&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=8)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/NJDJmrT.png)](https://www.youtube.com/watch?v=qQ6xbv5kPxE&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=8)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
