updating quantization video

--- a/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
+++ b/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Quantization in PyTorch | Mixed Precision Training\n",
+    "\n",
+    "### [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=RPvx3yZ2fc8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=10)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/al0WvlW.png)](https://www.youtube.com/watch?v=RPvx3yZ2fc8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=10)\n",
+    "\n",
+    "\n",
     "Neural Networks are implemented as computational graphs, and their com‐\n",
     "putations often use 32-bit (or in some cases, 64-bit) floating-\n",
     "point numbers. However, we can enable our computations to use \n",
