updating quantization video

--- a/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
+++ b/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First a simple implementation of LeNet5 architecture to build a working a Neural Network on which will see the effects of Quantization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
