updating quantization video

--- a/PyTorch-Techniques/49-torch-tensor-vs-numpy-ndarray-and-detach-method-in-pytorch.ipynb
+++ b/PyTorch-Techniques/49-torch-tensor-vs-numpy-ndarray-and-detach-method-in-pytorch.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will cover the following topics:\n",
+    "## Torch Tensor vs numpy ndarray and detach() method in PyTorch\n",
+    "\n",
+    "\n",
+    "### [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=jM09Mr06dYY&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=6)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/hG7uggm.png)](https://www.youtube.com/watch?v=jM09Mr06dYY&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=6)\n",
+    "\n",
+    "\n",
+    "#### We will cover the following topics:\n",
     "\n",
     "- How to convert torch.tensor to numpy ndarray\n",
     "\n",
@@ -33,6 +41,13 @@
     "\n",
     "print(tensor1)\n",
     "print(type(tensor1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Below code will not execute and will throw error \"Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.\""
    ]
   },
   {
