--- a/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
+++ b/PyTorch-Techniques/54-Quantization-Mixed-Precision.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "### [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=RPvx3yZ2fc8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=10)\n",
     "\n",
-    "[![Imgur](https://imgur.com/al0WvlW.png)](https://www.youtube.com/watch?v=RPvx3yZ2fc8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=10)\n",
+    "[![Imgur](https://imgur.com/MO5BPwm.png)](https://www.youtube.com/watch?v=RPvx3yZ2fc8&list=PLxqBkZuBynVQqJTE9nRM2p7Tb12TDPlnq&index=10)\n",
+    "\n",
     "\n",
     "\n",
     "Neural Networks are implemented as computational graphs, and their com‐\n",
