updating LeNet Shape Calculations

--- a/PyTorch-Techniques/55-LeNet5-Shape-Calculation.ipynb
+++ b/PyTorch-Techniques/55-LeNet5-Shape-Calculation.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LeNet5 Architecture \n",
+    "## LeNet5 Input Shape Calculation\n",
+    "\n",
+    "### [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=ys3VRBW4qx8&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=10)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/1SEnRQi.png)](https://www.youtube.com/watch?v=ys3VRBW4qx8&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=10)\n",
+    "\n",
+    "\n",
+    "--------------------------\n",
+    "\n",
+    "### LeNet5 Architecture as per original paper\n",
     "\n",
     "![Imgur](https://imgur.com/P51KCHJ.png)\n",
     "\n",
