Finalizing ResNet from Scratch

--- a/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
@@ -1,6 +1,45 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## ResNet from Scratch on CIFAR-10 Dataset\n",
+        "\n",
+        "The below comments are taken from the original paper from implementing ResNet on CIFAR-10 Dataset. And I will follow this structure for this implementation of ResNet on CIFAR10.\n",
+        "\n",
+        "\"We conducted more studies on the CIFAR-10 dataset\n",
+        "which consists of 50k training images and 10k test-\n",
+        "ing images in 10 classes.\n",
+        "\n",
+        " The network inputs are 32×32 images, with\n",
+        "the per-pixel mean subtracted. The first layer is 3×3 convolutions. Then we use a stack of 6n layers with 3×3 convolutions on the feature maps of sizes {32, 16, 8} respectively,\n",
+        "with 2n layers for each feature map size. The numbers of\n",
+        "filters are {16, 32, 64} respectively.\n",
+        "\n",
+        "The subsampling is performed by convolutions with a stride of 2. The network ends\n",
+        "with a global average pooling, a 10-way fully-connected\n",
+        "layer, and softmax.\n",
+        "\n",
+        "There are totally 6n+2 stacked weighted layers.\n",
+        "\n",
+        "We compare n = {3, 5, 7, 9}, leading to 20, 32, 44, and 56-layer networks.\n",
+        "\n",
+        "When shortcut connections are used, they are connected\n",
+        "to the pairs of 3×3 layers (totally 3n shortcuts).\n",
+        "\n",
+        "On this dataset we use identity shortcuts in all cases (i.e., option A), so our residual models have exactly the same depth, width, and number of parameters as the plain counterparts.\"\n",
+        "---\n",
+        "\n",
+        "For this example here in this file, I have used n=9. So my ResNet blocks are like [9, 9, 9]\n",
+        "\n",
+        "And thats why the total layers are 56 (i.e. 9 * 6 + 2)\n",
+        "\n",
+        "![Imgur](https://imgur.com/ifD8qbd.png)\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -562,11 +601,6 @@
         "    \n",
         "    return train_loader, val_loader, test_loader"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
