Finalizing ResNet from Scratch

--- a/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/56-ResNet56_From_Scratch_PyTorch.ipynb
@@ -4,7 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## ResNet from Scratch on CIFAR-10 Dataset\n",
+        "## ResNet Paper Implementation from Scratch with PyTorch on CIFAR-10 Dataset\n",
+        "\n",
+        "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=P8U1VL93jzA&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=6)\n",
+        "\n",
+        "[![Imgur](https://imgur.com/NhVhb4u.png)](https://www.youtube.com/watch?v=P8U1VL93jzA&list=PLxqBkZuBynVRX6QExfPyzRGj5Ap_zmcAJ&index=6)\n",
+        "\n",
+        "---\n",
         "\n",
         "The below comments are taken from the original paper from implementing ResNet on CIFAR-10 Dataset. And I will follow this structure for this implementation of ResNet on CIFAR10.\n",
         "\n",
