--- a/Computer_Vision/57-GoogLeNet_Inception-v1_From_Scratch_PyTorch/Final_Training_GoogLeNet.ipynb
+++ b/Computer_Vision/57-GoogLeNet_Inception-v1_From_Scratch_PyTorch/Final_Training_GoogLeNet.ipynb
@@ -6,7 +6,12 @@
         "id": "fQYTKcCS9LYB"
       },
       "source": [
-        "We are going to implement GoogLeNet and train it on CIFAR-10."
+        "## We are going to implement GoogLeNet and train it on CIFAR-10.\n",
+        "\n",
+        "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=CZNYrkdDrmQ&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=12)\n",
+        "\n",
+        "[![Imgur](https://imgur.com/a5lSG5y.png)](https://youtu.be/AIK6Gi3NUhI)\n",
+        "\n"
       ]
     },
     {
