updating links for Inception v1

--- a/Computer_Vision/57-GoogLeNet_Inception-v1_From_Scratch_PyTorch/Final_Training_GoogLeNet.ipynb
+++ b/Computer_Vision/57-GoogLeNet_Inception-v1_From_Scratch_PyTorch/Final_Training_GoogLeNet.ipynb
@@ -582,6 +582,70 @@
         "\n",
         "print('Test accuracy: {}'.format(test_accuracy))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Bonus Sections - GoogLeNet Basic Explanations as talked about the associated YouTube Video \n",
+        "\n",
+        "\n",
+        "\n",
+        "### Original Problem\n",
+        "\n",
+        "Salient parts in the image can have extremely large variation in size. For instance, an image with a cat can be either of the following, as shown below. The area occupied by the cat is different in each image.\n",
+        "\n",
+        "![Imgur](https://imgur.com/uAWiQaC.png)\n",
+        "\n",
+        "- Because of this huge variation in the location of the information, choosing the right kernel size for the convolution operation becomes tough. A larger kernel is preferred for information that is distributed more globally, and a smaller kernel is preferred for information that is distributed more locally.\n",
+        "\n",
+        "- Very deep networks are prone to overfitting. It also hard to pass gradient updates through the entire network.\n",
+        "\n",
+        "- Naively stacking large convolution operations is computationally expensive.\n",
+        "\n",
+        "The Solution:\n",
+        "\n",
+        "Why not have filters with multiple sizes operate on the same level? The network essentially would get a bit “wider” rather than “deeper”. The authors designed the inception module to reflect the same.\n",
+        "\n",
+        "The below image is the “naive” inception module. It performs convolution on an input, with 3 different sizes of filters (1x1, 3x3, 5x5). Additionally, max pooling is also performed. The outputs are concatenated and sent to the next inception module.\n",
+        "\n",
+        "![Imgur](https://imgur.com/x5pl2QB.png)\n",
+        "\n",
+        "However,  deep neural networks are computationally expensive. To make it cheaper, the authors limit the number of input channels by adding an extra 1x1 convolution before the 3x3 and 5x5 convolutions. Though adding an extra operation may seem counterintuitive, 1x1 convolutions are far more cheaper than 5x5 convolutions, and the reduced number of input channels also help. Do note that however, the 1x1 convolution is introduced after the max pooling layer, rather than before.\n",
+        "\n",
+        "\n",
+        "![Imgur](https://imgur.com/zqrJ2jo.png)\n",
+        "\n",
+        "Using the dimension reduced inception module, a neural network architecture was built. This was popularly known as GoogLeNet (Inception v1). The architecture is shown below:\n",
+        "\n",
+        "\n",
+        "Proposed Architectural Details\n",
+        "The paper proposes a new type of architecture – GoogLeNet or Inception v1. It is basically a convolutional neural network (CNN) which is 27 layers deep. Below is the model summary:\n",
+        "\n",
+        "\n",
+        "![Imgur](https://imgur.com/8Br0HLk.png)\n",
+        "\n",
+        "Notice in the above image that there is a layer called inception layer. This is actually the main idea behind the paper’s approach.\n",
+        "\n",
+        "![Imgur](https://imgur.com/B281dyr.png)\n",
+        "\n",
+        "\n",
+        "### (Inception Layer) is a combination of all those layers (namely, 1×1 Convolutional layer, 3×3 Convolutional layer, 5×5 Convolutional layer) with their output filter banks concatenated into a single output vector forming the input of the next stage.\n",
+        "\n",
+        "\n",
+        "===========================================================================\n",
+        "\n",
+        "### Inception Module:\n",
+        "\n",
+        "The inception module is different from previous architectures such as AlexNet, ZF-Net. In this architecture, there is a fixed convolution size for each layer.\n",
+        "\n",
+        "In theory you can have as many filter sizes as possible, but the Inception Architecture is restricted to filter sizes 1 × 1, 3 × 3 and 5 × 5. The small filters help capture the local details and features whereas spread out features of higher abstraction are captured by the larger filters. A 3 × 3 max pooling is also added to the Inception architecture, because, why not? Historically, it has been found that pooling layers make the network work better, so might as well add them!\n",
+        "\n",
+        "#### In the Inception module 1×1, 3×3, 5×5 convolution and 3×3 max pooling performed in a parallel way at the input and the output of these are stacked together to generate final output. The idea behind is - that the convolution filters of different sizes will handle objects at multiple scale better.\n",
+        "\n",
+        "\n",
+        "==========================================================================="
+      ]
     }
   ],
   "metadata": {
