--- a/Computer_Vision/58-DCGAN-from-Scratch-with-PyTorch/DCGAN_ONLY_train.ipynb
+++ b/Computer_Vision/58-DCGAN-from-Scratch-with-PyTorch/DCGAN_ONLY_train.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=yOtdN6W4O_0&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/kL41U2b.png)](https://www.youtube.com/watch?v=yOtdN6W4O_0&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
