completing CycleGAN from Scratch Implementations

--- a/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/CycleGAN_From_Scratch_PyTorch_Comple.ipynb
+++ b/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/CycleGAN_From_Scratch_PyTorch_Comple.ipynb
@@ -2,6 +2,15 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=wHo4N3njxDY&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n",
+        "\n",
+        "[![Imgur](https://imgur.com/PrgnIAi.png)](https://www.youtube.com/watch?v=wHo4N3njxDY&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jpEB1WLrhOx1"
       },
