completing CycleGAN from Scratch Implementations

--- a/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/Final_Training_Only.ipynb
+++ b/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/Final_Training_Only.ipynb
@@ -33,6 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example output after running about 120 epochs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![Imgur](https://imgur.com/JfOx37U.png)"
    ]
   }
